--- a/package.json
+++ b/package.json
@@ -32,10 +32,15 @@
     "mongoose": "^8.5.3",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.1",
+    "react-syntax-highlighter": "^15.5.0",
     "swiper": "^11.1.9",
     "use-local-storage": "^3.0.0"
   },
