--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.23.0",
+    "@azure/msal-node": "^2.13.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cropperjs": "^1.6.2",
     "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -27,6 +31,7 @@
     "express-validator": "^7.2.0",
     "firebase": "^10.13.0",
     "helmet": "^7.1.0",
+    "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -38,12 +43,16 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.8",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.6",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.1",
     "react-syntax-highlighter": "^15.5.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.1.9",
     "use-local-storage": "^3.0.0"
   },
