--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-easy-crop": "^5.0.8",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.6",
+    "react-loading-skeleton": "^3.4.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
