Update User Dashboard

--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ JWT_SECRET=MljplauEQiQHR4ZVwnnoqjrZ49RFpQ4HQrVNM7KNDjk=
 JWT_EXPIRES_IN=3600
 EMAIL_TOKEN_SECRET=MljplauEQiQHR4ZVwnnoqjrZ49RFpQ4HQrVNM7KNDjk= # This can be the same as JWT_SECRET or a different one
 EMAIL_TOKEN_EXPIRES_IN=3600
+
+
+# Base API URL for your application
+VITE_API_URL=http://192.168.193.146:5000
+
+# Sentry DSN for error monitoring
+VITE_SENTRY_DSN=your_sentry_dsn_here
+
