--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@azure/msal-browser": "^3.23.0",
     "@azure/msal-node": "^2.13.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@sentry/react": "^8.31.0",
+    "@sentry/tracing": "^7.114.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
